--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,3 @@
-<footer class="site-footer">
-  <div class="wrapper">
-    <p class="text">© {{ site.time | date: '%Y' }} Dr. Frederic Rizk</p>
-  </div>
-</footer>
+<div class="page__footer-copyright">
+  &copy; {{ site.time | date: '%Y' }} Dr. Frederic Rizk
+</div>
