--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,9 @@
-<div class="page__footer-copyright">
+<div class="page__footer-logo" style="text-align: center; margin-bottom: 1rem;">
+  <img src="{{ '/images/pic-logo.png' | relative_url }}" 
+       alt="CARISET Logo" 
+       style="height: 80px; width: auto;">
+</div>
+
+<div class="page__footer-copyright" style="text-align: center;">
   &copy; {{ site.time | date: '%Y' }} Dr. Frederic Rizk
 </div>
