--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <div class="page__footer-logo" style="text-align: center; margin-bottom: 1rem;">
-  <img src="{{ '/images/pic-logo.png' | relative_url }}" 
+  <img src="{{ '/images/logo-cariset.png' | relative_url }}" 
        alt="CARISET Logo" 
        style="height: 80px; width: auto;">
 </div>
